--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <java.version>1.8</java.version>
 
         <bouncycastle.version>1.59</bouncycastle.version>
-        <bouncypgp.version>2.1.0</bouncypgp.version>
+        <bouncygpg.version>2.1.0</bouncygpg.version>
         <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
     </properties>
 
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>name.neuhalfen.projects.crypto.bouncycastle.openpgp</groupId>
             <artifactId>bouncy-gpg</artifactId>
-            <version>${bouncypgp.version}</version>
+            <version>${bouncygpg.version}</version>
         </dependency>
     </dependencies>
 
@@ -68,4 +68,15 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>bintray</id>
+            <name>bintray</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 </project>
